# auth_app_backend

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  fresh_logs.txt  latest_error.txt  logs.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_12_08_1419_809e2f0676ef.py  2025_12_08_1424_8fea6e968541.py  2025_12_08_1432_2ef8938c0b54.py  2025_12_11_2314_04a9d7f7b5a1.py
scripts/: entrypoint.sh
src/data/: domain.py
src/modules/: config.py  main.py
src/modules/auth/: auth_app.py  auth_dto.py  auth_metier.py  auth_model.py  auth_repo.py  auth_router.py
tests/: conftest.py
