[project]
name = "fastapi-auth-api" # Nom du projet (nécessaire pour uv sync)
version = "0.1.0"
description = "API d'Authentification avec FastAPI, SQLAlchemy et uv"
authors = [
    { name = "User", email = "user@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.uv]

[tool.uv.dev]
# Dépendances de développement (linters, formatters, etc.)
dependencies = [
    "python-dotenv",
    "alembic",
    "ruff" # Ajout de Ruff pour le linter/formatter
]

[tool.uv.project]
# Dépendances d'exécution
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic[email]",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "asyncpg", # Driver pour PostgreSQL
]