[project]
name = "fastapi-auth-api" # Nom du projet (nécessaire pour uv sync)
version = "0.1.0"
description = "API d'Authentification avec FastAPI, SQLAlchemy et uv"
authors = [
    { name = "User", email = "user@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"

# Dépendances d'exécution (main dependencies)
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic[email]",
    "pydantic-settings",
    "passlib==1.7.4",
    "python-jose[cryptography]",
    "asyncpg", # Driver pour PostgreSQL
    "bcrypt==4.1.2",
]

# Dépendances de développement (dev-dependencies)
[tool.uv]
dev-dependencies = [
    "python-dotenv",
    "alembic",
    "ruff", # Ajout de Ruff pour le linter/formatter
    "fastapi-cli", # Ajout du CLI pour l'exécutable 'fastapi run'
    "pytest",
    "httpx",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"